Redesign onboarding steps and clean up user guide page
- Onboarding adımları 1-5 için iki sütunlu sidebar tasarımı (renk kodlu: indigo/violet/emerald/orange/teal)
- Adım 0 karşılama sayfası flex two-column layout ile yeniden tasarlandı
- Kaydırılabilir listeler için alt fade + zıplayan ok göstergesi eklendi
- Kullanıcı Rehberi sayfasından "şimdi ne yapalım" bölümü kaldırıldı (sadece sayfa rehberi kaldı)
- Kullanılmayan START_STEPS, QUICK_NEEDS sabitleri ve importlar temizlendi
- Backend: medication side effects, AI insights, matching service güncellemeleri

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>